<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Patient"
        android:textColor="@color/LightGreen"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textColor="@color/LightGreen"
        android:textStyle="bold"
        android:textSize="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <TextView
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Activity"
        android:padding="5dp"
        android:textStyle="bold"
        android:textColor="@color/LightGreen"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/steps"
        android:textSize="20dp"
        android:inputType="text"
        android:textStyle="bold"
        android:textColor="@color/LightGreen"/>
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Measurement"
        android:textStyle="bold"
        android:textColor="@color/LightGreen"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="text"
                android:textStyle="bold"
                android:hint="@string/Height"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Heart"
        android:textStyle="bold"
        android:textColor="@color/LightGreen"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="@string/HeartRate"
                android:inputType="text"
                android:textStyle="bold"
                android:textColor="@color/LightGreen"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symptoms"
        android:textStyle="bold"
        android:textColor="@color/LightGreen"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:hint="@string/WriteSymptoms"
            android:inputType="text"
            android:textStyle="bold"
            android:textColor="@color/LightGreen"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicine"
                android:textStyle="bold"
                android:textColor="@color/LightGreen"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="@string/MedicineTaken"
                android:inputType="text"
                android:textStyle="bold"
                android:textColor="@color/LightGreen"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Vitals"
                android:textStyle="bold"
                android:textColor="@color/LightGreen"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="@string/BodyTemperature"
                android:inputType="text"
                android:textStyle="bold"
                android:textColor="@color/LightGreen"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Respiratory"
                android:textStyle="bold"
                android:textColor="@color/LightGreen"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="@string/RespiratoryRate"
                android:inputType="text"
                android:textStyle="bold"
                android:textColor="@color/LightGreen"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SLEEP"
                android:textStyle="bold"
                android:textColor="@color/LightGreen"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="@string/AverageSleep"
                android:inputType="text"
                android:textStyle="bold"
                android:textColor="@color/LightGreen"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BloodPressure"
                android:textStyle="bold"
                android:textColor="@color/LightGreen"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="@string/BloodPressure"
                android:inputType="text"
                android:textStyle="bold"
                android:textColor="@color/LightGreen"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OtherData"
                android:textStyle="bold"
                android:textColor="@color/LightGreen"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="@string/OtherData"
                android:inputType="text"
                android:textStyle="bold"
                android:textColor="@color/LightGreen"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>